Re-written animation code
* Still uses (almost) the same rules, but more powerful underlying concept
* Re-introduced shape H for "L" sounds
* Introduced shape X for idle position

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -193,6 +193,7 @@ set(SOURCE_FILES
 	src/Shape.cpp src/Shape.h
 	src/centiseconds.cpp src/centiseconds.h
 	src/EnumConverter.h
+	src/Viseme.cpp src/Viseme.h
 	src/mouthAnimation.cpp src/mouthAnimation.h
 	src/phoneExtraction.cpp src/phoneExtraction.h
 	src/platformTools.cpp src/platformTools.h
