Converted README file to AsciiDoc
This allows for better formatting, more readable tables, easier references etc.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -278,7 +278,7 @@ install(
 	DESTINATION .
 )
 install(
-	FILES README.md LICENSE.md VERSION.md
+	FILES README.adoc LICENSE.md VERSION.md
 	DESTINATION .
 )
 
