Improved generated package name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -264,11 +264,17 @@ set(CPACK_PACKAGE_NAME ${appName})
 string(REPLACE " " "-" CPACK_PACKAGE_NAME "${CPACK_PACKAGE_NAME}")
 if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
 	set(CPACK_SYSTEM_NAME "OSX")
+elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
+	set(CPACK_SYSTEM_NAME "Win32")
+else()
+	set(CPACK_SYSTEM_NAME "${CMAKE_SYSTEM_NAME}")
 endif()
 set(CPACK_PACKAGE_VERSION_MAJOR ${appVersionMajor})
 set(CPACK_PACKAGE_VERSION_MINOR ${appVersionMinor})
 set(CPACK_PACKAGE_VERSION_PATCH ${appVersionPatch})
 set(CPACK_PACKAGE_VERSION ${appVersion})
+set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_SYSTEM_NAME}")
+string(TOLOWER "${CPACK_PACKAGE_FILE_NAME}" CPACK_PACKAGE_FILE_NAME)
 set(CPACK_GENERATOR ZIP)
 
 # Copy resource files at build time; install them at package time
