--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,7 +125,9 @@ set(webRTCFiles
 )
 add_library(webRTC ${webRTCFiles})
 target_compile_options(webRTC PRIVATE ${disableWarningsFlags})
-target_compile_options(webRTC PRIVATE -pthread -lpthread)
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+  target_compile_options(webRTC PRIVATE -pthread -lpthread)
+endif()
 if (NOT WIN32)
 	target_compile_definitions(webRTC PRIVATE WEBRTC_POSIX)
 endif()
