Added overarching animation step that prevents long static segments
See http://animateducated.blogspot.com/2016/10/lip-sync-animation-2.html?showComment=1478861729702#c2940729096183546458

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,6 +229,8 @@ add_library(rhubarb-animation
 	src/animation/ShapeRule.cpp
 	src/animation/ShapeRule.h
 	src/animation/shapeShorthands.h
+	src/animation/staticSegments.cpp
+	src/animation/staticSegments.h
 	src/animation/targetShapeSet.cpp
 	src/animation/targetShapeSet.h
 	src/animation/timingOptimization.cpp
@@ -375,6 +377,7 @@ add_library(rhubarb-tools
 	src/tools/exceptions.cpp
 	src/tools/exceptions.h
 	src/tools/Lazy.h
+	src/tools/nextCombination.h
 	src/tools/NiceCmdLineOutput.cpp
 	src/tools/NiceCmdLineOutput.h
 	src/tools/ObjectPool.h
