--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ matrix:
       script:
         - mkdir build
         - cd build
-        - cmake -DCMAKE_CXX_COMPILER=g++-5 .. && make
+        - cmake -DCMAKE_CXX_COMPILER=g++-5 .. && make && ./runTests
     - os: osx
       osx_image: xcode7.3
       script:
         - mkdir build
         - cd build
-        - cmake .. && make
+        - cmake .. && make && ./runTests
