--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(appName "Rhubarb Lip Sync")
 set(appVersionMajor 1)
 set(appVersionMinor 6)
 set(appVersionPatch 0)
-set(appVersionSuffix "-pre1")
+set(appVersionSuffix "")
 set(appVersion "${appVersionMajor}.${appVersionMinor}.${appVersionPatch}${appVersionSuffix}")
 
 project(${appName})
