--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,11 @@ elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
 endif()
 
+# Use UTF-8 throughout
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+	add_compile_options("/utf-8")
+endif()
+
 if(${UNIX})
 	add_definitions(-DHAVE_UNISTD_H)
 endif()
