Made entire application Unicode-aware
All 8-bit strings are UTF-8-encoded now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -424,6 +424,8 @@ target_include_directories(rhubarb-tools PUBLIC "src/tools")
 target_link_libraries(rhubarb-tools
 	cppFormat
 	whereami
+	utfcpp
+	utf8proc
 )
 
 # Define Rhubarb executable
