--- a/extras/rhubarb-for-spine/.gitignore
+++ b/extras/rhubarb-for-spine/.gitignore
@@ -1,4 +1,13 @@
+# User-specific files:
+/.idea/**/workspace.xml
+/.idea/**/tasks.xml
+/.idea/dictionaries/
+
+# Gradle:
 /.gradle/
-/.idea/workspace.xml
-/.idea/tasks.xml
+/.idea/**/gradle.xml
+/.idea/**/libraries/
+/.idea/**/*.iml
+
 /build/
+/out/
