--- a/extras/rhubarb-for-spine/build.gradle
+++ b/extras/rhubarb-for-spine/build.gradle
@@ -13,29 +13,33 @@ group 'com.rhubarb_lip_sync'
 version = getVersion()
 
 buildscript {
-    ext.kotlin_version = '1.1.4-3'
+	ext.kotlin_version = '1.1.60'
 
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+	}
 }
 
 apply plugin: 'kotlin'
 
 repositories {
-    mavenCentral()
+	mavenCentral()
+	jcenter()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+	compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+	compile 'com.beust:klaxon:0.30'
+	compile 'org.apache.commons:commons-lang3:3.7'
+	compile 'no.tornado:tornadofx:1.7.12'
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+	kotlinOptions.jvmTarget = '1.8'
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+	kotlinOptions.jvmTarget = '1.8'
 }
