--- a/extras/rhubarb-for-spine/gradle/wrapper/gradle-wrapper.properties
+++ b/extras/rhubarb-for-spine/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,5 @@
-#Tue Nov 28 18:16:46 CET 2017
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.3-bin.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.5-rc-2-all.zip
+zipStoreBase=GRADLE_USER_HOME
