--- a/extras/rhubarb-for-spine/build.gradle
+++ b/extras/rhubarb-for-spine/build.gradle
@@ -43,3 +43,14 @@ compileKotlin {
 compileTestKotlin {
 	kotlinOptions.jvmTarget = '1.8'
 }
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'com.rhubarb_lip_sync.rhubarb_for_spine.MainKt'
+	}
+
+	// This line of code recursively collects and copies all of a project's files
+	// and adds them to the JAR itself. One can extend this task, to skip certain 
+	// files or particular types at will
+	from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
