--- a/extras/rhubarb-for-spine/.gitignore
+++ b/extras/rhubarb-for-spine/.gitignore
@@ -1,14 +1,8 @@
-# User-specific files:
-/.idea/**/workspace.xml
-/.idea/**/tasks.xml
-/.idea/dictionaries/
+# Directory is generated when importing Gradle project
+/.idea/
 
-# Gradle:
+*.iml
 /.gradle/
-/.idea/**/gradle.xml
-/.idea/**/libraries/
-/.idea/**/*.iml
-
 /build/
 /out/
 /tmp/
