--- a/extras/EsotericSoftwareSpine/CMakeLists.txt
+++ b/extras/EsotericSoftwareSpine/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.2)
 
 add_custom_target(
 	rhubarbForSpine ALL
-	"./gradlew" "shadowJar"
+	"./gradlew" "build"
 	WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
 	COMMENT "Building Rhubarb for Spine through Gradle."
 )
