Generate nicer artifact names
For instance, Rhubarb-Lip-Sync-1.10.0-macOS.zip rather than rhubarb-lip-sync-1.10.0-osx.zip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,7 @@ install(
 # Configure CPack
 function(get_short_system_name variable)
 	if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
-		set(${variable} "OSX" PARENT_SCOPE)
-	elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
-		set(${variable} "Win32" PARENT_SCOPE)
+		set(${variable} "macOS" PARENT_SCOPE)
 	else()
 		set(${variable} "${CMAKE_SYSTEM_NAME}" PARENT_SCOPE)
 	endif()
@@ -35,7 +33,6 @@ set(CPACK_PACKAGE_VERSION_MINOR ${appVersionMinor})
 set(CPACK_PACKAGE_VERSION_PATCH ${appVersionPatch})
 set(CPACK_PACKAGE_VERSION ${appVersion})
 set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_SYSTEM_NAME}")
-string(TOLOWER "${CPACK_PACKAGE_FILE_NAME}" CPACK_PACKAGE_FILE_NAME)
 set(CPACK_GENERATOR ZIP)
 
 # Run CPack
