--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,20 +10,20 @@ jobs:
             os: windows-2019
             cmakeOptions: '-G "Visual Studio 16 2019" -A x64'
             publish: true
-          - description: macOS / Xcode
-            os: macos-10.15
-            cmakeOptions: ""
-            publish: true
+          # - description: macOS / Xcode
+          #   os: macos-10.15
+          #   cmakeOptions: ""
+          #   publish: true
           - description: Linux / GCC
             os: ubuntu-20.04
             cmakeOptions: "-D CMAKE_C_COMPILER=gcc-10 -D CMAKE_CXX_COMPILER=g++-10"
             publish: true
-          - description: Linux / Clang
-            os: ubuntu-20.04
-            cmakeOptions: "-D CMAKE_C_COMPILER=clang-12 -D CMAKE_CXX_COMPILER=clang++-12"
-            publish: false
+          # - description: Linux / Clang
+          #   os: ubuntu-20.04
+          #   cmakeOptions: "-D CMAKE_C_COMPILER=clang-12 -D CMAKE_CXX_COMPILER=clang++-12"
+          #   publish: false
     env:
-      BOOST_ROOT: ${{github.workspace}}/lib/boost
+      BOOST_ROOT: ${{ github.workspace }}/lib/boost
       BOOST_URL: https://sourceforge.net/projects/boost/files/boost/1.76.0/boost_1_76_0.tar.bz2/download
     steps:
       - name: Checkout repository
@@ -65,3 +65,19 @@ jobs:
           else
             ./build/rhubarb/runTests
           fi
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: binaries
+      - name: Create GitHub release draft
+        uses: softprops/action-gh-release@v1
+        with:
+          draft: true
+          files: "*.zip"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
